# Dispatcharr-Core

./: .rustfmt.toml  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/PULL_REQUEST_TEMPLATE/: FEATURE.md  dev.md  main.md
src/: lib.rs
src/cli/: options.rs
src/downloader/: download.rs  mod.rs  options.rs  retrieval.rs  types.rs
src/logging/: macros.rs  sink.rs
src/recipe/: mod.rs
vod_downloader/: Cargo.toml
vod_downloader/src/: main.rs
vod_downloader/src/api/: mod.rs
vod_downloader/src/cli/: arguments.rs  mod.rs  options.rs
vod_downloader/src/downloader/: download.rs  mod.rs  retrieval.rs  types.rs
vod_downloader/src/logging/: macros.rs  mod.rs  sink.rs
vod_downloader/src/recipe/: mod.rs
