[package]
name = "dispatcharr_vod_downloader_core"
description = "dispatcharr_vod_downloader_core is the core for downloading VODs off of Dispatcharr used in the respective plugin and cli."
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/VOD-Downloaders/Dispatcharr-Core"

[dependencies]
colored = "3.1.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["mkv", "isomp4"] }
