[package]
name = "vod_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["mkv", "isomp4"] }